# dcvpg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DCVPG_PRD_v4.md  LICENSE  README.md  pyproject.toml
dcvpg/: __init__.py  pyproject.toml
dcvpg/.github/workflows/: ci.yml  publish.yml
dcvpg/ai_agents/anomaly_detector/: baseline_store.py  detector_agent.py
dcvpg/ai_agents/auto_healer/: agent.py  fix_proposer.py  github.py  patcher.py  schema_differ.py
dcvpg/ai_agents/contract_generator/: generator_agent.py  profiler.py
dcvpg/ai_agents/rca_agent/: rca.py  report_builder.py
dcvpg/alerting/: alert_manager.py  base_alerter.py  pagerduty_alerter.py  slack_alerter.py  teams_alerter.py  webhook_alerter.py
dcvpg/api/: main.py
dcvpg/api/routers/: __init__.py  contracts.py  generate.py  pipelines.py  quarantine.py  reports.py
dcvpg/cli/: main.py
dcvpg/cli/commands/: diff.py  generate.py  init.py  mcp_server.py  register.py  replay.py  serve.py  status.py  validate.py  watch.py
dcvpg/config/: config_loader.py  config_validator.py  contract.schema.json
dcvpg/dashboard/pages/: 01_overview.py  02_contract_registry.py  03_violations.py  04_schema_drift.py  05_quarantine.py  06_ownership.py
dcvpg/dcvpg/: __main__.py
dcvpg/dcvpg/ai_agents/: base_agent.py
dcvpg/dcvpg/alerting/: slack_alerter.py  webhook_alerter.py
dcvpg/dcvpg/cli/: main.py
dcvpg/dcvpg/dashboard/: app.py
dcvpg/dcvpg/engine/: registry.py
dcvpg/dcvpg/mcp_server/: server.py
dcvpg/dcvpg/monitoring/: metrics.py
dcvpg/docs/: api_reference.md  connectors.md  contract_authoring.md  custom_rules.md  index.md  mcp_setup.md  quickstart.md
dcvpg/engine/: autowatch.py  contract_loader.py  models.py  quarantine_engine.py  report_store.py  validator.py
dcvpg/engine/connectors/: file_connector.py  gcs_connector.py  rest_api_connector.py
dcvpg/engine/reporting/: schema_diff.py  violation_report.py
dcvpg/engine/rules/: anomaly_rules.py  base_rule.py  custom_rule_loader.py  freshness_rules.py  quality_rules.py  schema_rules.py  type_rules.py  uniqueness_rules.py
dcvpg/infra/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
dcvpg/infra/k8s/: configmap.yaml  deployment.yaml  service.yaml
dcvpg/mcp_server/: auth.py  dcvpg_client.py
dcvpg/mcp_server/tools/: agent_tools.py  quarantine_tools.py
dcvpg/migrations/: 001_init.sql  002_alerts.sql  003_snapshots.sql  004_baselines.sql  005_mcp_audit.sql
dcvpg/monitoring/: grafana.json
dcvpg/templates/: airflow_dag.py.template  contract.yaml.template  custom_connector.py.template  custom_rule.py.template  dcvpg.config.yaml.template  github_workflow.yml.template  prefect_flow.py.template
dcvpg/tests/integration/: test_airflow_operator.py  test_api_endpoints.py  (+1 more)
(+63 files in other folders)
