[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcvpg"
version = "1.3.7"
description = "Data Contract Validator and Pipeline Guardian — generic, open-source"
authors = [{ name = "Data Engineering", email = "pasindupremarathna11@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "pydantic>=2.0",
  "great-expectations>=0.18",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "click>=8.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "streamlit>=1.32",
  "psycopg2-binary>=2.9",
  "pandas>=2.0",
  "sqlalchemy>=2.0",
  "prometheus-client>=0.19"
]

[project.optional-dependencies]
airflow    = ["apache-airflow>=2.8"]
prefect    = ["prefect>=2.0"]
dagster    = ["dagster>=1.0"]
mcp        = ["mcp>=1.0"]
ai         = ["anthropic>=0.25", "deepdiff>=6.0", "scipy", "numpy", "pandas", "PyGithub>=2.0", "slack-bolt>=1.0"]
connectors = ["pymysql>=1.0", "boto3>=1.34", "s3fs>=2024.2", "gcsfs>=2024.2", "snowflake-sqlalchemy>=1.5", "pandas-gbq>=0.23"]
all        = ["dcvpg[mcp,ai,airflow,prefect,dagster,connectors]"]

[project.scripts]
dcvpg = "dcvpg.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["dcvpg*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "integration: marks tests as integration tests (deselect with '-m not integration')",
]
